--- a/src/app/components/chart-display/chart-display.component.html
+++ b/src/app/components/chart-display/chart-display.component.html
@@ -1,1 +1,2 @@
-<p>chart-display works!</p>
+'<highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions"></highcharts-chart>'
+<!--<div id="container"></div>-->
