network graph works!

--- a/src/app/components/chart-display/chart-display.component.html
+++ b/src/app/components/chart-display/chart-display.component.html
@@ -1,2 +1,4 @@
-'<highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions"></highcharts-chart>'
-<!--<div id="container"></div>-->
+<header>
+  <h1>Angular + Highcharts</h1>
+</header>
+<div id="chart-container"></div>
