add functional options

--- a/src/app/components/chart-display/chart-display.component.html
+++ b/src/app/components/chart-display/chart-display.component.html
@@ -1,4 +1,6 @@
-<header>
-  <h1>Angular + Highcharts</h1>
-</header>
-<div id="chart-container"></div>
+<div class="page">
+  <header>
+    <h1>Angular + Highcharts</h1>
+  </header>
+  <div id="chart-container"></div>
+</div>
