add force layout to the main bar

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -2,4 +2,5 @@
   <a routerLink="/">Home</a>
   <a routerLink="/highcharts">Highcharts</a>
   <a routerLink="/D3">D3.Js</a>
+  <a routerLink="/force">Force</a>
 </nav>
