--- a/src/app/components/force-layout/force-layout.component.html
+++ b/src/app/components/force-layout/force-layout.component.html
@@ -1,4 +1,5 @@
 <div class="graph-container">
+  <div id="tooltip-container" class="graph-tooltip hidden"></div>
   <div id="force_graph" class="force_graph"></div>
 </div>
 
