remove home page - not needed

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,5 @@
 <nav>
-  <a routerLink="/">Home</a>
   <a routerLink="/highcharts">Highcharts</a>
-  <a routerLink="/D3">D3.Js</a>
-  <a routerLink="/force">Force</a>
+  <a routerLink="/D3">Tree graph</a>
+  <a routerLink="/force">Network graph</a>
 </nav>
