--- a/src/app/components/chart-display/chart-display.component.scss
+++ b/src/app/components/chart-display/chart-display.component.scss
@@ -5,6 +5,10 @@
   {
     background-color: white;
   }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .my-network-graph{
   background-color: azure;
